website/versioned_docs/version-2.0.0-alpha.10/web.globaljsoncontainerstorage.md
---
id: version-2.0.0-alpha.10-web.globaljsoncontainerstorage
title: GlobalJSONContainerStorage class
hide_title: true
original_id: web.globaljsoncontainerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## GlobalJSONContainerStorage class


<b>Signature:</b>

```typescript
export declare class GlobalJSONContainerStorage implements ContainerStorage 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(driver)](./web.globaljsoncontainerstorage._constructor_.md) |  | Constructs a new instance of the <code>GlobalJSONContainerStorage</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [delAccessToken(namespace)](./web.globaljsoncontainerstorage.delaccesstoken.md) |  |  |
|  [delIdentity(namespace)](./web.globaljsoncontainerstorage.delidentity.md) |  |  |
|  [delOAuthRedirectAction(namespace)](./web.globaljsoncontainerstorage.deloauthredirectaction.md) |  |  |
|  [delUser(namespace)](./web.globaljsoncontainerstorage.deluser.md) |  |  |
|  [getAccessToken(namespace)](./web.globaljsoncontainerstorage.getaccesstoken.md) |  |  |
|  [getIdentity(namespace)](./web.globaljsoncontainerstorage.getidentity.md) |  |  |
|  [getOAuthRedirectAction(namespace)](./web.globaljsoncontainerstorage.getoauthredirectaction.md) |  |  |
|  [getUser(namespace)](./web.globaljsoncontainerstorage.getuser.md) |  |  |
|  [setAccessToken(namespace, accessToken)](./web.globaljsoncontainerstorage.setaccesstoken.md) |  |  |
|  [setIdentity(namespace, identity)](./web.globaljsoncontainerstorage.setidentity.md) |  |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./web.globaljsoncontainerstorage.setoauthredirectaction.md) |  |  |
|  [setUser(namespace, user)](./web.globaljsoncontainerstorage.setuser.md) |  |  |

